--- a/aftman.toml
+++ b/aftman.toml
@@ -6,3 +6,4 @@
 stylua = "JohnnyMorganz/stylua@0.20.0"
 darklua = "seaofvoices/darklua@0.13.1"
 pesde = "daimond113/pesde@0.4.7"
+wally = "upliftgames/wally@0.3.2"
