--- a/wally.toml
+++ b/wally.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ernisto/fusor-lib"
-version = "0.0.4"
+version = "0.0.5"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
@@ -19,7 +19,7 @@ exclude = [
     # misc files
     "sourcemap.json",
     "tests",
-    "build",
+    "src",
 ]
 
 [dependencies]
