--- a/wally.toml
+++ b/wally.toml
@@ -1,9 +1,10 @@
 [package]
 name = "ernisto/fusor-lib"
-version = "0.0.5"
+version = "0.0.6"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
+include = [ "build/roblox/out" ]
 exclude = [
     # settings
     "aftman.toml",
